--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.1",
     "mongodb": "^6.1.0",
     "mongoose": "^7.3.4",
+    "mongoose-autopopulate": "^1.1.0",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
